--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,45 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
 
 .App-header {
+  text-align: center;
   background-color: #222;
-  height: 150px;
-  padding: 20px;
   color: white;
+  height: 50px;
+}
+
+.App-main {
+  flex: auto;
+  justify-content: center;
+  align-items: center;
+  height: calc(100vh - 50px);
 }
 
 .App-title {
   font-size: 1.5em;
+  line-height: 50px;
+  margin: 0px;
 }
 
-.App-intro {
-  font-size: large;
+.editor-pane {
+  height: 100%;
+}
+
+.CodeMirror {
+  height: 100%;
+  padding-left: 20px;
+}
+
+.ReactCodeMirror {
+  height: 100%;
+}
+
+.md-preview {
+  padding: 20px;
 }
 
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+@import '../node_modules/codemirror/lib/codemirror.css';
+@import '../node_modules/codemirror/theme/material.css';
