--- a/src/App.css
+++ b/src/App.css
@@ -42,6 +42,11 @@
   padding: 20px;
 }
 
+.emoji {
+  width: 16px;
+  height: 16px;
+}
+
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
